--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ Main.py
 __pycache__
 Setup.py command.txt
 build/*
-dist
-venv/*
-abc.py
+distg
+setup.py
 setuptools.setup structure.txt
 *egg-info/*
